--- a/pong-01.css
+++ b/pong-01.css
@@ -1,3 +1,37 @@
 #display {
   background-color: black;
 }
+#titulo{
+  font-family: monospace;
+  font-size: 35px;
+  border: 1.5px outset black;
+  border-radius: 8px;
+  padding:20px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 460px;
+  color: black;
+  font-weight: bold;
+}
+#display{
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+#dif {
+  font-family: monospace;
+  font-size: 15px;
+  border: 1.5px outset black;
+  border-radius: 8px;
+  padding:10px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  color: black;
+  font-weight: bold;
+}
